Fix overflow CSS property

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 body {
     color: $textcolor;
     background-color: $bgcolor;
-    overflow-x: none;
+    overflow-x: hidden;
 }
 
 h1 {
